--- a/config.yaml.sample
+++ b/config.yaml.sample
@@ -1,7 +1,8 @@
 num_threads: 4
+lock_file: /var/run/lock/hoard.pid
 logging:
   level: DEBUG
-  file_path: hoard.log
+  # file_path: hoard.log
 registry:
   bucket: my-bucket-name
   path: data.db
